# endless-dialogue

./: README.md  endless-dialogue.cabal
src/System/Process/: EndlessDialogue.hs
tests/: Echo.hs  TestRunner.hs
