name:                endless-dialogue
version:             0.1.0.0
synopsis:            Library to handle interactions with an external program through stdin/stdout
-- description:         
homepage:            https://github.com/SneakingCat
license:             GPL-3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          sneakingcatsw@gmail.com
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:         
  ghc-options:	       -Wall -threaded
  hs-source-dirs:      src
  exposed-modules:     System.Process.EndlessDialogue
  build-depends:       base >= 4 && < 5,
                       bytestring >= 0.9,
                       process >= 1.1
  
executable Echo
  hs-source-dirs:	tests
  main-is:		Echo.hs
  build-depends:	base >= 4 && < 5


Test-Suite endless-dialogue-tests
  type:			exitcode-stdio-1.0
  x-used-tf:		true
  ghc-options:		-Wall -threaded
  hs-source-dirs:	src, tests
  main-is:		TestRunner.hs
  build-depends:	base >= 4 && < 5,
                        HUnit >= 1.2 && < 2,			
                        test-framework >= 0.4.1,
                        test-framework-hunit,
                        bytestring >= 0.9,
                        process >= 1.1